--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "jsx": "react-jsx",
     "allowJs": true,
 
+    // Enable strict type-checking
+    "paths": { "@/*": ["./src/*"] },
+
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
