--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "@types/papaparse": "^5.3.14"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -18,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
+    "papaparse": "^5.4.1",
     "zod": "^3.23.6"
   }
 }
