--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
+    "translatte": "^3.0.1",
     "zod": "^3.23.6"
   }
 }
