refactor spreadSheed function to use request body

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "src",
   "module": "index.ts",
   "scripts": {
-    "dev": "bun run ./src/server.ts"
+    "dev": "bun run --watch ./src/server.ts"
   },
   "type": "module",
   "devDependencies": {
