chore: Update package.json scripts
Added a new "start" script to run the server without watching for changes.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "src",
   "module": "index.ts",
   "scripts": {
-    "dev": "bun run --watch ./src/server.ts"
+    "dev": "bun run --watch ./src/server.ts",
+    "start": "bun run ./src/server.ts"
   },
   "type": "module",
   "devDependencies": {
