--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
