--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "src",
   "module": "index.ts",
   "scripts": {
-    "dev": "bun run --watch ./src/server.ts",
-    "start": "bun run ./src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "type": "module",
   "devDependencies": {
@@ -11,7 +12,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/papaparse": "^5.3.14"
+    "@types/papaparse": "^5.3.14",
+    "nodemon": "^3.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -19,9 +21,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
-    "dayjs": "^1.11.11",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
     "translatte": "^3.0.1",
