--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "src",
-  "module": "index.ts",
+  "main": "src/server.ts",
   "scripts": {
     "dev": "bun run --watch ./src/server.ts",
     "build": "tsc",
