refactor função spreadSheet para usar o papa.parse para fazer o parsing do CSV e o axios para enviar registros em partes e formatar valores de data e hora de forma consistente

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
-    "rootDir": ".",
-    "baseUrl": "src",
-    "outDir": "build",
+    "target": "es6",
+    "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "build",
+    "baseUrl": "./src",
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "incremental": true,
-    "allowJs": true,
+    "strictPropertyInitialization": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "paths": {
       "@/*": ["*"]
     }
   },
-  "include": ["src", "package.json", "scripts"]
+  "exclude": ["node_modules"],
+  "include": ["./src/**/*"]
 }
