--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "src",
-  "main": "src/server.ts",
   "scripts": {
     "dev": "bun run --watch ./src/server.ts",
     "build": "tsc",
-    "start": "node dist/src/server.js"
+    "start": "node build/src/server.js"
   },
   "type": "module",
   "devDependencies": {
@@ -13,17 +12,14 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/papaparse": "^5.3.14",
-    "nodemon": "^3.1.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.4.5",
+    "tsc": "^2.0.4"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
     "express": "^4.19.2",
-    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
     "translatte": "^3.0.1",
