--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "strict": true,
+    "allowJs": true,
     "esModuleInterop": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "build",
-    "baseUrl": "./src",
-    "forceConsistentCasingInFileNames": true,
-    "strictPropertyInitialization": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "isolatedModules": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "outDir": "dist",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
-    }
-  },
-  "exclude": ["node_modules"],
-  "include": ["./src/**/*"]
+      "@/*": ["./src/*"]
+    },
+    "target": "ESNext"
+  }
 }
