--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/papaparse": "^5.3.14",
-    "typescript": "^5.4.5",
     "tsc": "^2.0.4"
+  },
+  "peerDependencies": {
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "axios": "^1.6.8",
