--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csv",
-  "type": "module",
+  "type": "commonjs",
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
