--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/papaparse": "^5.3.14",
-    "tsc": "^2.0.4"
+    "@types/papaparse": "^5.3.14"
   },
   "peerDependencies": {
     "typescript": "^5.4.5"
@@ -15,6 +14,7 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.20.1",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
@@ -26,7 +26,7 @@
     "dev": "bun run --watch ./src/index.ts",
     "dev:build": "esbuild ./src/index.ts --bundle --outdir=dist --packages=external --platform=node --sourcemap --watch",
     "dev:run": "node --inspect -r ./dist/dev.js --watch dist/src",
-    "build": "esbuild index=./src --bundle --minify --outdir=dist --packages=external --platform=node",
-    "start": "node dist"
+    "build": "esbuild  index=./src --bundle --minify --outdir=dist --packages=external --platform=node",
+    "start": "node  dist"
   }
 }
