--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/papaparse": "^5.3.14"
+    "@types/papaparse": "^5.3.14",
+    "@types/short-hash": "^1.0.2"
   },
   "peerDependencies": {
     "typescript": "^5.4.5"
@@ -19,6 +20,7 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
+    "short-hash": "^1.0.0",
     "translatte": "^3.0.1",
     "zod": "^3.23.6"
   },
