refact: Add support for importing TypeScript extensions

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "esbuild": "^0.20.1",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
+    "node-xlsx": "^0.24.0",
     "papaparse": "^5.4.1",
     "short-hash": "^1.0.0",
     "translatte": "^3.0.1",
