--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@clickhouse/client": "^1.4.1",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
