--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/papaparse": "^5.3.14",
-    "@types/short-hash": "^1.0.2"
+    "@types/short-hash": "^1.0.2",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.2"
   },
   "peerDependencies": {
     "typescript": "^5.4.5"
@@ -27,9 +32,7 @@
     "zod": "^3.23.6"
   },
   "scripts": {
-    "dev": "bun run --watch ./src/index.ts",
-    "dev:build": "esbuild ./src/index.ts --bundle --outdir=dist --packages=external --platform=node --sourcemap --watch",
-    "dev:run": "node --inspect -r ./dist/dev.js --watch dist/src",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "build": "esbuild  index=./src --bundle --minify --outdir=dist --packages=external --platform=node",
     "start": "node  dist"
   }
