--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "papaparse": "^5.4.1",
     "short-hash": "^1.0.0",
     "translatte": "^3.0.1",
+    "tsx": "^4.19.2",
     "zod": "^3.23.6"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+    "dev": "tsx watch -r tsconfig-paths/register src/index.ts",
+    "dev:debug": "tsx watch -r tsconfig-paths/register --inspect-brk src/index.ts",
     "build": "esbuild  index=./src --bundle --minify --outdir=dist --packages=external --platform=node",
     "start": "node  dist"
   }
